Make changes to the project

--- a/vite-project/src/App.css
+++ b/vite-project/src/App.css
@@ -12,10 +12,10 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #14f750aa);
 }
 .logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  filter: drop-shadow(0 0 2em #380255aa);
 }
 
 @keyframes logo-spin {
@@ -34,9 +34,9 @@
 }
 
 .card {
-  padding: 2em;
+  padding: 4em;
 }
 
 .read-the-docs {
-  color: #888;
+  color: #0b0b0b;
 }
