--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #d51717;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #8489db9d;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #6ed718;
 }
 
 body {
@@ -42,7 +42,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #181717;
   cursor: pointer;
   transition: border-color 0.25s;
 }
