--- a/src/components/Divider/divider.module.css
+++ b/src/components/Divider/divider.module.css
@@ -1,5 +1,9 @@
 .divider {
   margin: 1rem;
-  margin-left: 5rem;
-  margin-right: 5rem;
+  margin-left: 10rem;
+  margin-right: 10rem;
+}
+
+.divider hr {
+  border: 0.5px solid #c9c9c9;
 }
