--- a/src/index.css
+++ b/src/index.css
@@ -1,68 +1,54 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+    color: rgb(229, 233, 238);
+    background-color: rgb(20, 17, 16);
+    padding: 30px 110px;
+    border-color: brown;
+    box-sizing:inherit;    
 }
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+h1{
+    color: rgb(178, 179, 125);
+    text-align: center; 
+    background-color: rgb(100, 65, 37);
 }
-a:hover {
-  color: #535bf2;
+button{
+    background-color: rgb(241, 230, 217);
+    display: inline-block;
+    padding: 5px 20px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+    transition: background-color 0.3s, color 0.3s;
+    border-radius: 20px;
 }
-
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+button:hover{
+    background-color: rgb(226, 236, 38);
+    box-shadow: 0 2px 10px rgba(243, 246, 244, 0.1); /* Box shadow for a lifted effect */
+    transform: translateY(4px); /* Move the button slightly up to create a lifting effect */    
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
+button:active {
+    background-color: #ddd;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+body{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: 90;
+    text-align: center; 
+    padding: auto;
+    background-color: rgb(53, 117, 64);
 }
+h2{
+    color: rgb(123, 213, 172);
+    text-align: center;
+    font-size: medium;
+}
+h3{
+    font-size: larger;
+    color: rgb(168, 209, 107);
+}
+
+
+
+
