--- a/src/styles.css
+++ b/src/styles.css
@@ -18,28 +18,29 @@
 
 .body1{
     position: relative;
-    left: 35%;
+    left: 42.5%;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     right: 230px;
 }
 
 .box {
-    width: 300px;;
-    height: 300px;
+    width: 400px;;
+    height: 400px;
     border: 1px solid black;
     padding: 10px;
     margin: 10px;
     position: relative;
-    left: 30%;
+    left: 37%;
   }
 
-  @media screen and (min-width:400px){
+  @media screen and (max-width:1100px){
     .button{
         background-color: blueviolet
     };
+
   }
 
-  @media screen and (min-width:700px) {
+  @media screen and (min-width:1100px) {
     .button{
         background-color: antiquewhite;
     }
