--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,8 @@ body {
   }
   
   .container {
+    display: flex;
+    flex-direction: column;
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
