--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,49 +1,105 @@
-body{
+body {
     background-color: bisque;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
 }
+
 .container {
-    width: 100%;
+    width: 1200px;
     margin: 0 auto;
     padding: 20px;
-  }
-header{
+}
+
+header {
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
 }
-nav {
 
+nav {
+    margin: 20px;
+    border-radius: 5px;
+    background-color: #f8f9fa;
+    padding: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-nav > ul {
+nav  ul {
     display: flex;
     justify-content: space-around;
     list-style-type: none;
-    margin-top: 50px;
-    padding: 10px;
-   
+    padding: 0;
+    margin: 0;
 }
+
+nav ul li {
+    margin-right: 20px;
+}
+
+nav ul li:last-child {
+    margin-right: 0;
+}
+
 nav ul li a {
     text-decoration: none;
-    color: #333;
-    border-color: 2px solid black;
+    color: #3e146f;
+    padding: 10px 20px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+    font-weight: bold;
 }
 
-a:hover {
-    background-color: #0056b3;
+nav ul li a:hover {
+    background-color:#4e7710;
+    color: #fff;
+}
+
+section {
+
+    margin: 20px;
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+section h2 {
+    text-align: center;
+    color: #333; /* Dark gray text color */
+    font-size: 28px; /* Larger font size */
+    margin-bottom: 20px; /* Spacing below heading */
+  }
+  
+section ul {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+  
+section ul li {
+    width: 200px;
+    background-color: #4e7710; /* Blue background color */
+    color: #fff; /* White text color */
+    padding: 15px 20px; /* Padding inside list items */
+    margin-bottom: 10px; /* Spacing between list items */
+    border-radius: 10px; /* Rounded corners */
+    text-align: center; /* Center align list items */
+    transition: transform 0.3s ease; /* Smooth transition */
+  }
+  
+ section ul li:hover {
+    transform: translateY(-5px); /* Move list items up on hover */
   }
 
-section{
-    margin: 20px;
-}
 
 footer {
     background-color: #333;
     color: #fff;
     padding: 20px;
     text-align: center;
-  }
+    border-top: 2px solid #fff;
+}
