--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -71,52 +71,71 @@
   position: relative;
   width: 80%; 
   height: 700px; 
-  border: 1px solid #ccc;
-  border-radius: 20px;
   overflow: hidden;
   margin: 10px;
+}
+
+.feature-box .text-overlay {
+  position:absolute;
+  padding: 20px;
+  color: white;
+  opacity: 0; 
+  transform: translateY(-50%) translateX(-100%);
+  animation: slideIn 0.8s ease forwards; 
+
+}
+.feature-box::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 1px solid #ccc;
+  border-radius: 20px;
   background-size: cover;
   background-position: center;
 
-  transform-origin: top;
   opacity: 0; 
-  animation: fadeInOpacity linear forwards; 
-  animation-timeline: view();
-  animation-range: entry 10px;
+  transform: translateX(-100%);
+  animation: slideIn 0.8s ease forwards; 
 }
 
-@keyframes fadeInOpacity {
-  10% { opacity: 0; }
-  100% { opacity: 1; }
+@keyframes slideIn {
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
-
-.box1 {
+.feature-box:nth-child(1)::before
+ {
   background-image: url('../assets/2.jpg');
+  animation-delay: 0.5s; 
+}
+.feature-box:nth-child(1) .text-overlay {
+  animation-delay: 0.5s; /* Delay animation for the first box */
 }
 
-
-.box2 {
+.feature-box:nth-child(2)::before {
   background-image: url('../assets/3.jpg');
+  animation-delay: 1s; 
 }
-  
-.box3 {
-  background-image: url('../assets/4.jpg');
+.feature-box:nth-child(2) .text-overlay {
+  animation-delay: 1s; /* Delay animation for the first box */
 }
 
-.box1:hover, .box2:hover, .box3:hover {
+.feature-box:nth-child(3)::before {
+  background-image: url('../assets/4.jpg');
+  animation-delay: 1.5s; 
+}
+
+.feature-box:nth-child(3) .text-overlay {
+  animation-delay: 1.5s; /* Delay animation for the first box */
+}
+.feature-box:hover {
   cursor: pointer;
   transform: scale(1.05);
 }
 
-.feature-box .text-overlay {
-  position: absolute;
-  padding: 20px;
-  text-align: center;
-  color: white;
-  top: 5%;
-  right: 0;
-  transform: translateY(-50%);
-}
+
 
 
 .feature-box h2 {
