--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -1,8 +1,35 @@
 .navbar {
   height: 100%;
+
   padding: 1rem 0.75rem;
+
+  background-color: #d2d2d2;
 }
 
 .navbar .header {
   margin-top: 5rem;
+}
+
+.navbar .navlink {
+  padding: 0.5rem 1.25rem;
+  border-radius: 8px;
+
+  transition: background-color 0.2s linear;
+  -ms-transition: background-color 0.2s linear;
+  -moz-transition: background-color 0.2s linear;
+  -webkit-transition: background-color 0.2s linear;
+}
+
+.navbar .navlink.active {
+  background-color: #1c79d7;
+  color: white;
+
+  transition: background-color 0.2s linear;
+  -ms-transition: background-color 0.2s linear;
+  -moz-transition: background-color 0.2s linear;
+  -webkit-transition: background-color 0.2s linear;
+}
+
+.navbar .navlink:hover {
+  cursor: pointer;
 }
