--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,145 +1,12 @@
-/* Google Font */
-.section-header{
-  display: flex;
-  justify-content:space-between;
-  margin: 0px;
-  padding: 0px;
+.navbar{
+    display: flex;
+    justify-content: center;
+}
+.navbar ul{
+    list-style-type: none;
 }
 
-.brand{
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 50px;
-    margin-bottom: 5px;
-    padding-left: 40px;
-    letter-spacing: 2px;
-}
-
-.motto{
-  font-family: "Slackside One", cursive;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 25px;
-  padding: 54px 20px 0px 0px;
-}
-
-.img-header {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 700px; 
-  width: 100%; 
-  overflow: hidden; 
-  position: relative;
-
-  transform-origin: bottom;
-  animation: fade-out linear forwards;
-  animation-timeline: view();
-  animation-range: exit 10px;
-}
-
-.img-header img {
-  max-width: 100%; 
-  max-height: 100%; 
-  height: auto; 
-  border-radius: 30px;
-
-}
-
-@keyframes fade-out{
-  25%{opacity: 1;}
-  85%,100% {opacity: 0; scale: 3;}
-  }
-
-
-.description{
-  font-family: "Slackside One", cursive;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 25px;
-  margin-top: 0px;
-  padding-left: 40px;
-}
-
-.feature-container {
-  display: flex;
-  justify-content: space-around; 
-}
-
-.feature-box {
-  position: relative;
-  width: 80%; 
-  height: 700px; 
-  overflow: hidden;
-  margin: 10px;
-}
-
-.feature-box .text-overlay {
-  position:absolute;
-  padding: 20px;
-  color: white;
-  opacity: 0; 
-  transform: translateY(-50%) translateX(-100%);
-  animation: slideIn 0.8s ease forwards; 
-
-}
-.feature-box::before {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  background-size: cover;
-  background-position: center;
-
-  opacity: 0; 
-  transform: translateX(-100%);
-  animation: slideIn 0.8s ease forwards; 
-}
-
-@keyframes slideIn {
-  to {
-    opacity: 1;
-    transform: translateX(0);
-  }
-}
-.feature-box:nth-child(1)::before
- {
-  background-image: url('../assets/2.jpg');
-  animation-delay: 0.5s; 
-}
-.feature-box:nth-child(1) .text-overlay {
-  animation-delay: 0.5s; /* Delay animation for the first box */
-}
-
-.feature-box:nth-child(2)::before {
-  background-image: url('../assets/3.jpg');
-  animation-delay: 1s; 
-}
-.feature-box:nth-child(2) .text-overlay {
-  animation-delay: 1s; /* Delay animation for the first box */
-}
-
-.feature-box:nth-child(3)::before {
-  background-image: url('../assets/4.jpg');
-  animation-delay: 1.5s; 
-}
-
-.feature-box:nth-child(3) .text-overlay {
-  animation-delay: 1.5s; /* Delay animation for the first box */
-}
-.feature-box:hover {
-  cursor: pointer;
-  transform: scale(1.05);
-}
-
-
-
-
-.feature-box h2 {
-  font-size: 24px;
-  font-family: "Bebas Neue", sans-serif;
-
+.navbar li{
+    float: left;
+    padding-left: 20px;
 }
