--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,17 @@
 
   width: 100%;
 }
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.w-100 {
+  width: 100% !important;
+}
+
+.h-100 {
+  height: 100% !important;
+}
