--- a/src/components/NavBar/navbar.module.css
+++ b/src/components/NavBar/navbar.module.css
@@ -1,7 +1,7 @@
 .navbar {
   height: 100%;
 
-  padding: 1rem 0.75rem;
+  padding: 1rem 0.75rem 0;
 
   background-color: #d2d2d2;
 }
@@ -11,8 +11,13 @@
 }
 
 .navbar .navlink {
+  display: block;
+
   padding: 0.5rem 1.25rem;
   border-radius: 8px;
+
+  text-decoration: none;
+  color: black;
 
   transition: background-color 0.2s linear;
   -ms-transition: background-color 0.2s linear;
