--- a/src/styles/components/button.module.css
+++ b/src/styles/components/button.module.css
@@ -1,12 +1,14 @@
 .button {
-  background-color: green;
+  background-color: #24ad1a;
   border-radius: 15px;
   color: white;
   width: 20%;
   height: 2.5rem;
   border: none;
+  transition: ease-in-out 0.3s;
 }
 
 .button:hover {
+  background-color: #2ee820;
   cursor: pointer;
 }
