--- a/src/styles/components/inputbox.module.css
+++ b/src/styles/components/inputbox.module.css
@@ -1,7 +1,27 @@
 .box {
-  border: 2px solid purple;
+  border: 2px solid black;
   border-radius: 5px;
-  width: 70%;
+  width: 350px;
   height: 40px;
   font-size: 18px;
+}
+
+.box:hover {
+  animation: shake 0.2s ease-in-out 0s 2;
+  box-shadow: 0 0 0.5em red;
+}
+
+@keyframes shake {
+  0% {
+    margin-left: 0rem;
+  }
+  25% {
+    margin-left: 0.5rem;
+  }
+  75% {
+    margin-left: -0.5rem;
+  }
+  100% {
+    margin-left: 0rem;
+  }
 }
