--- a/src/styles.css
+++ b/src/styles.css
@@ -1,47 +1,113 @@
 .button{
-    border-style: ridge;
-    border-color: aliceblue;
-    color:rgb(69, 193, 47);
-    background-color: antiquewhite;
+    width: 100px;
+    height: 100px;
+    border-style:double;
+    background-color: rgb(234, 25, 67);
+    border-color: rgb(7, 75, 134);
+    color:rgb(19, 19, 19);
     font-family: 'Times New Roman', Times, serif;
-    font-size: large;
+    font-size: 30px;
     font-style: oblique;
     border-radius: 10%;
-}
-
-.body{
-    font-style: italic;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: rgb(248, 164, 61);
-    text-align: center;
-}
-
-.body1{
     position: relative;
-    left: 42.5%;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    right: 230px;
+    left: 35%;
+    top: 35%;
+    transition: 2s;
 }
 
-.box {
-    width: 400px;;
-    height: 400px;
-    border: 1px solid black;
-    padding: 10px;
-    margin: 10px;
-    position: relative;
-    left: 37%;
+.button:hover,
+.button:focus{
+    background-color: antiquewhite;
+    cursor:pointer;
+    box-shadow: 10px 10px 10px rgba(156, 166, 242, 0.918);
+}
+
+
+.box1 {
+    width: 800px;;
+    height: 800px;
+    border:3px solid;
+    float: right;
+    margin-right: 28%;
+    padding-top: 5%;
+    background-color: bisque;
+    border-color: blueviolet;
+    cursor: pointer;
   }
 
-  @media screen and (max-width:1100px){
-    .button{
-        background-color: blueviolet
+  .box1:hover,
+  .box2:focus{
+    background-color: rgb(251, 85, 63);
+    transition: all 1s;
+  }
+
+  .box2 {
+    width: 500px;;
+    height: 500px;
+    border:3px solid;
+    background-color: rgb(60, 232, 217);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+    border-color: rgb(235, 7, 152);
+    cursor: pointer;
+    border-radius: 10%;
+  }
+
+  .box2:hover,
+  .box2:focus{
+    transform: rotate(90deg);
+    transition: all 2.5s;
+  }
+  
+  .box3{
+    width: 300px;
+    height: 300px;
+    background-color: rgba(213, 243, 92, 0.918);
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 18%;
+    border: 3px solid;
+    border-color: rgb(241, 15, 139);
+    animation: fade 8s;
+  }
+
+
+@keyframes fade{
+    from {
+        opacity: 0;
+    }
+    to{
+        opacity: 100;
+    }
+}
+
+.box3:hover,
+.box3:focus{
+    transform: rotate(-90deg);
+    transition: all 2s;
+}
+
+ /* @media screen and (max-width:809px){
+    .box1{width: 900px;;
+        height: 900px;
+        border:3px solid;
+        background-color: bisque;
+        border-color: blueviolet;
+        cursor: pointer;
     };
 
   }
 
-  @media screen and (min-width:1100px) {
-    .button{
-        background-color: antiquewhite;
+  @media screen and (min-width:810px) {
+    .box1{
+        width: 900px;;
+        height: 900px;
+        border:3px solid;
+        float: right;
+        margin-right: 20%;
+        background-color: bisque;
+        border-color: blueviolet;
+        cursor: pointer;
     }
-  }
+  }*/
