--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,45 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
 }
+
+hr {
+  border: 1px solid #c9c9c9;
+}
+
+.page {
+  padding: 1rem 2.5rem;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn {
+  color: white;
+  background-color: #0956b4;
+
+  border: none;
+  border-radius: 8px;
+
+  padding: 0.5rem 1.25rem;
+}
+
+.btn:hover {
+  cursor: pointer;
+  background-color: #2b68b2;
+}
+
+.input-control {
+  display: block;
+  font-size: 16px;
+
+  border: 0.8px solid #c9c9c9;
+  border-radius: 8px;
+  box-sizing: border-box;
+
+  padding: 0.75rem 1.25rem;
+
+  width: 100%;
+}
