--- a/src/components/TaskList/list.module.css
+++ b/src/components/TaskList/list.module.css
@@ -1,11 +1,25 @@
 .list {
+  display: block;
   border: 0.8px solid #c9c9c9;
   border-radius: 8px;
+
+  padding: 1.5rem 2rem;
+  margin-bottom: 0.5rem;
+
+  text-decoration: none;
 
   /* transition: background-color 0.3s linear;
   -ms-transition: background-color 0.3s linear;
   -moz-transition: background-color 0.3s linear;
   -webkit-transition: background-color 0.3s linear; */
+}
+
+.completed {
+  text-decoration: line-through;
+}
+
+.list:visited {
+  color: black;
 }
 
 .list:hover {
@@ -16,4 +30,8 @@
   -ms-transition: background-color 0.3s linear;
   -moz-transition: background-color 0.3s linear;
   -webkit-transition: background-color 0.3s linear; */
+}
+
+.action-btn {
+  text-decoration: none;
 }
