--- a/src/components/TaskForm/form.module.css
+++ b/src/components/TaskForm/form.module.css
@@ -1,4 +1,13 @@
 .form {
+  border: 0.8px solid #c9c9c9;
+  border-radius: 8px;
+
+  padding: 2rem;
+
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 550px;
 }
 
 .title {
