--- a/src/components/TaskList/list.module.css
+++ b/src/components/TaskList/list.module.css
@@ -1,17 +1,22 @@
 .list {
   display: block;
+
+  width: 550px;
+
   border: 0.8px solid #c9c9c9;
   border-radius: 8px;
 
   padding: 1.5rem 2rem;
   margin-bottom: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
 
   text-decoration: none;
 
-  /* transition: background-color 0.3s linear;
-  -ms-transition: background-color 0.3s linear;
-  -moz-transition: background-color 0.3s linear;
-  -webkit-transition: background-color 0.3s linear; */
+  transition: background-color 0.1s linear;
+  -ms-transition: background-color 0.1s linear;
+  -moz-transition: background-color 0.1s linear;
+  -webkit-transition: background-color 0.1s linear;
 }
 
 .completed {
@@ -26,10 +31,10 @@
   cursor: pointer;
   background-color: #c9c9c9;
 
-  /* transition: background-color 0.3s linear;
-  -ms-transition: background-color 0.3s linear;
-  -moz-transition: background-color 0.3s linear;
-  -webkit-transition: background-color 0.3s linear; */
+  transition: background-color 0.1s linear;
+  -ms-transition: background-color 0.1s linear;
+  -moz-transition: background-color 0.1s linear;
+  -webkit-transition: background-color 0.1s linear;
 }
 
 .action-btn {
